# vowel-recognition-using-CNN

./: CMakeLists.txt
Headers/: ConvolNetwork.h  Img.h  Landmarks.h  Landmarks.h.gch  Streaming.h  Streaming.h.gch
IncludeFiles/: MRS_mean.binaryproto  deploy.prototxt  synset.txt
Source/: CMakeLists.txt  ConvolNetwork.cpp  Img.cpp  Landmarks.cpp  Streaming.cpp  main.cpp
